<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    tools:ignore="HardcodedText">

    <LinearLayout
        android:id="@+id/keyboardContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="UselessParent">

        <!-- Row 1 -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/buttonBarStyle">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/_1"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/_2"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/_3"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1" />
        </LinearLayout>

        <!-- Row 2 -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/buttonBarStyle">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="4"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="5"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="6"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1" />
        </LinearLayout>

        <!-- Row 3 -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/buttonBarStyle">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="7"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="8"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="9"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1" />
        </LinearLayout>

        <!-- Row 4 -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/buttonBarStyle">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/_0"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1" />
        </LinearLayout>





    </LinearLayout>
</FrameLayout>